After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656301 - glib-compile-schemas should not create an empty gschemas.compiled file
glib-compile-schemas should not create an empty gschemas.compiled file
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gsettings
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: Allison Karlitskaya (desrt)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-08-10 17:08 UTC by Sam Thursfield
Modified: 2012-01-19 03:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Give detailed warning instead of assert() (633 bytes, patch)
2011-08-11 00:02 UTC, Sam Thursfield
none Details | Review

Description Sam Thursfield 2011-08-10 17:08:29 UTC
After running 'make uninstall' on a package installed in /usr/local, I had an empty /usr/local/share/glib-2.0/schemas/gschemas.compiled

This led to the gsettings tool failing:

sam@candylion:~$ gsettings list-schemas
**
GLib-GIO:ERROR:/build/buildd/glib2.0-2.28.6/./gio/gsettingsschema.c:125:ensure_schema_lists: assertion failed: (list != NULL)
Aborted
Comment 1 Sam Thursfield 2011-08-11 00:02:47 UTC
Created attachment 193606 [details] [review]
Give detailed warning instead of assert()
Comment 2 Sam Thursfield 2011-08-11 00:03:22 UTC
I am completely unable to reproduce this now. However, somehow it occurred that I got an empty gschemas.compiled file, so I think it makes sense to replace the assert() with a warning so nobody else loses half an hour trying to debug the problem.

The error occurred with glib 2.28.6 (ubuntu natty) which doesn't have any obvious bugs in glib-compile-schemas that I can see causing this.
Comment 3 Allison Karlitskaya (desrt) 2012-01-19 03:17:05 UTC
Pushed a patch to just silently ignore the empty files.  They're
harmless.  Sorry I didn't see this one earlier.